[refactor] 예외 처리 응답 구조 표준화