@@ -1,66 +1,51 @@
 package com.example.aniwhere.global.error;
 
-import lombok.AccessLevel;
-import lombok.Getter;
-import lombok.NoArgsConstructor;
+import jakarta.validation.ConstraintViolation;
+import lombok.*;
 import org.springframework.validation.BindingResult;
 import org.springframework.web.method.annotation.MethodArgumentTypeMismatchException;
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Set;
+import java.util.stream.Collectors;
 
+/**
+ * 일관성있는 예외 응답을 반환하기 위한 클래스
+ */
 @Getter
 @NoArgsConstructor(access = AccessLevel.PROTECTED)
 public class ErrorResponse {
 
-	private String message;
 	private int status;
-	private List<FieldError> errors;
 	private String code;
+	private String message;
+	private List<FieldError> errors;
 
-	private ErrorResponse(String message) {
-		this.message = message;
-	}
-
-	private ErrorResponse(String message, String code) {
-		this.message = message;
-		this.code = code;
-	}
-
-	private ErrorResponse(String message, String code, List<FieldError> errors) {
-		this.message = message;
-		this.code = code;
+	private ErrorResponse(final ErrorCode code, final List<FieldError> errors) {
+		this.status = code.getStatus();
+		this.code = code.getCode();
+		this.message = code.getMessage();
 		this.errors = errors;
 	}
 
-	public ErrorResponse(final ErrorCode code, final List<FieldError> errors) {
-		this.message = code.getMessage();
-		this.status = code.getStatus();
-		this.errors = errors;
-		this.code = code.getCode();
-	}
-
-	public ErrorResponse(final ErrorCode code) {
-		this.message = code.getMessage();
+	private ErrorResponse(final ErrorCode code) {
 		this.status = code.getStatus();
 		this.code = code.getCode();
+		this.message = code.getMessage();
 		this.errors = new ArrayList<>();
-	}
-
-	public static ErrorResponse from(String message){
-		return new ErrorResponse(message);
-	}
-
-	public static ErrorResponse of(String message, String code) {
-		return new ErrorResponse(message, code);
-	}
-
-	public static ErrorResponse of(String message, String code, BindingResult result) {
-		return new ErrorResponse(message, code, FieldError.of(result));
 	}
 
 	public static ErrorResponse of(final ErrorCode code, final BindingResult bindingResult) {
 		return new ErrorResponse(code, FieldError.of(bindingResult));
+	}
+
+	public static ErrorResponse of(final ErrorCode code, final Set<ConstraintViolation<?>> constraintViolations) {
+		return new ErrorResponse(code, FieldError.of(constraintViolations));
+	}
+
+	public static ErrorResponse of(final ErrorCode code, final String missingParameterName) {
+		return new ErrorResponse(code, FieldError.of(missingParameterName, "", "parameter must required"));
 	}
 
 	public static ErrorResponse of(final ErrorCode code) {
@@ -71,11 +56,12 @@ public class ErrorResponse {
 		return new ErrorResponse(code, errors);
 	}
 
-	public static ErrorResponse of(MethodArgumentTypeMismatchException ex) {
-		final String input = ex.getValue() == null ? "" : ex.getValue().toString();
-		final List<ErrorResponse.FieldError> errors = ErrorResponse.FieldError.of(ex.getName(), input, ex.getErrorCode());
+	public static ErrorResponse of(MethodArgumentTypeMismatchException e) {
+		final String value = e.getValue() == null ? "" : e.getValue().toString();
+		final List<FieldError> errors = FieldError.of(e.getName(), value, e.getErrorCode());
 		return new ErrorResponse(ErrorCode.INVALID_TYPE_VALUE, errors);
 	}
+
 
 	@Getter
 	@NoArgsConstructor(access = AccessLevel.PROTECTED)
@@ -84,26 +70,39 @@ public class ErrorResponse {
 		private String value;
 		private String reason;
 
-		private FieldError(final String field, final String input, final String reason) {
+		public FieldError(String field, String value, String reason) {
 			this.field = field;
-			this.value = input;
+			this.value = value;
 			this.reason = reason;
 		}
 
-		public static List<FieldError> of(final String field, final String input, final String reason) {
+		public static List<FieldError> of(final String field, final String value, final String reason) {
 			List<FieldError> fieldErrors = new ArrayList<>();
-			fieldErrors.add(new FieldError(field, input, reason));
+			fieldErrors.add(new FieldError(field, value, reason));
 			return fieldErrors;
 		}
 
-		private static List<FieldError> of(final BindingResult bindingResult) {
+		public static List<FieldError> of(final BindingResult bindingResult) {
 			final List<org.springframework.validation.FieldError> fieldErrors = bindingResult.getFieldErrors();
 			return fieldErrors.stream()
 					.map(error -> new FieldError(
 							error.getField(),
 							error.getRejectedValue() == null ? "" : error.getRejectedValue().toString(),
-							error.getDefaultMessage()))
-					.toList();
+							error.getDefaultMessage()
+					))
+					.collect(Collectors.toList());
+		}
+
+		public static List<FieldError> of(final Set<ConstraintViolation<?>> constraintViolations) {
+			List<ConstraintViolation<?>> lists = new ArrayList<>(constraintViolations);
+			return lists.stream()
+					.map(error -> new FieldError(
+							error.getPropertyPath().toString(),
+							"",
+							error.getMessageTemplate()
+					))
+					.collect(Collectors.toList());
 		}
 	}
+
 }
